feat(checkout): implement flash-sale checkout, pre-payment validation, and transaction rollback handling
- Implement effective pricing projection in CartItemRepository using native SQL and window functions
- Add pessimistic locking for flash-sale quota decrements in CheckoutFinalizer
- Pre-validate stock, active flash-sale quota, and soft-deletion (deletedAt) before payment gateway execution
- Configure @Transactional(noRollbackFor = CoreThrowHandler.class) across checkout service and finalizer to ensure status updates commit on payment/quota errors
- Add unit and integration tests for repository pricing projections, finalizer quota decrements, and checkout service validation